tests/negative/generics/const_fn_redecl.orng
fn template(const n: Int) -> Int {
    n + 4
}

fn template(const n: Int) -> Int {
    n + 4
}

fn main() -> Int {
    template(4)
}